<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/masukan_dua_angka"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/nomor1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:labelFor="@+id/nomor1"
            android:inputType="numberDecimal"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/nomor2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:inputType="numberDecimal"
            android:labelFor="@id/nomor2"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/button"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="hitung"
                android:tag="tambah"
                android:text="@string/plus"
                android:textColor="@color/colorPrimaryDark"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button2"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="hitung"
                android:tag="kurang"
                android:text="@string/kurang"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/button3"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="hitung"
                android:tag="kali"
                android:text="@string/kali"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/button4"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="hitung"
                android:tag="bagi"
                android:text="@string/bagi"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:text="@string/bersihkan"
            android:onClick="bersih"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hasil"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:gravity="center"/>


        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nol"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:gravity="center"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>